tests/Checker/everything/errors/5c.vc
int main() {
    int b;
    { int a = 1; }
    b = a;
    return 1;
}
